--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -6,14 +6,14 @@ x-app-base:
     context: .
     dockerfile: Dockerfile
   environment:
-    - DEBUG=True
+    # - DEBUG=True
     - PYTHONUNBUFFERED=1
     - PYTHONASYNCIODEBUG=1
     - DATABASE_URL=psql://psqluser:psqlpass@db/hc
-    - STATIC_ROOT=/data/static
-    - MEDIA_ROOT=/data/media
     - ALLOWED_HOSTS=*
     - CACHE_URL=rediscache://redis:6379/1
+    - DEBUG=False
+    - USE_WHITENOISE=True
   volumes:
     - .:/usr/src/app
     - media_root:/data/media
@@ -43,7 +43,7 @@ services:
       - "14902:8000"
     command: |
       ./wait-for-it.sh db:5432 -- bash -c "
-      python manage.py migrate --noinput;
+      python manage.py migrate --noinput; python manage.py collectstatic --noinput;
       while [ true ]; do python manage.py runserver 0.0.0.0:8000 ; sleep 10; done"
 
   smtp:
