--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ django-appconf==1.0.4
 django-compressor==2.4
 django-environ==0.4.5
 django-redis==4.12.1
+gunicorn==20.0.4
 idna==2.10
 psycopg2==2.8.4
 python-dateutil==2.8.1
